--- a/packages/bun-router/package.json
+++ b/packages/bun-router/package.json
@@ -2,7 +2,7 @@
   "name": "bun-router",
   "type": "module",
   "version": "0.0.0",
-  "description": "A Redis-backed job queue built for Bun.",
+  "description": "A",
   "author": "Chris Breuer <chris@stacksjs.org>",
   "license": "MIT",
   "homepage": "https://github.com/stacksjs/bun-router#readme",
