--- a/packages/bun-router/package.json
+++ b/packages/bun-router/package.json
@@ -13,6 +13,9 @@
   "bugs": {
     "url": "https://github.com/stacksjs/bun-router/issues"
   },
+  "bin": {
+    "bun-router": "./dist/cli.js"
+  },
   "keywords": [
     "router",
     "route",
