--- a/packages/bun-router/package.json
+++ b/packages/bun-router/package.json
@@ -34,7 +34,8 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "bun-router": "./dist/cli.js"
+    "bun-router": "./dist/cli.js",
+    "router": "./bin/cli.ts"
   },
   "files": [
     "README.md",
@@ -70,6 +71,9 @@
   },
   "dependencies": {
     "bunfig": "^0.8.3",
+    "cac": "^6.7.14",
+    "chalk": "^5.4.1",
+    "openapi-types": "^12.1.3",
     "ts-rate-limiter": "^0.4.0"
   },
   "lint-staged": {
